--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   <div>
     <h2>Welcome</h2>
     <hr>
-    <p>Hey! I'm Arda Serdar Pektezol, a senior computer engineering student with over a year of professional experience as a software engineer.</p>
-    <p>I also have a blog where my friends and I write mostly about technology and programming. Check it out at <a href="https://blog.pektezol.dev">blog.pektezol.dev</a>.</p>
+    <p>Hey! I'm Arda Serdar Pektezol, a senior computer engineering undergraduate student with over a year of professional experience as a software engineer.</p>
+    <p>I have liked working with both software and hardware in the past. If something intrigues me, I will research and work on it no matter what. My aim is to be a jack of all trades, master of one.</p>
+    <p>Currently working on Turkish Natural Language Processing for my senior design project, alongside working part-time as a software engineer. In my free time, I work on my personal projects which can be found down below.</p>
+    <p>I also have a blog! Check it out at <a href="https://blog.pektezol.dev">blog.pektezol.dev</a>.</p>
     <h2>Projects | <a href="https://github.com/pektezol/BitReader">GitHub</a></h2>
     <hr>
     <h3>Portal 2 Least Portals Hub | <a href="https://github.com/pektezol/LeastPortalsHub">GitHub</a> | <a href="https://lp.ardapektezol.com">lp.ardapektezol.com</a></h3>
