pektezol: fix wrong github link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>I have liked working with both software and hardware in the past. If something intrigues me, I will research and work on it no matter what. My aim is to be a jack of all trades, master of one.</p>
     <p>Currently working on Turkish Natural Language Processing for my senior design project, alongside working part-time as a software engineer. In my free time, I work on my personal projects which can be found down below.</p>
     <p>I also have a blog! Check it out at <a href="https://blog.pektezol.dev">blog.pektezol.dev</a>.</p>
-    <h2>Projects | <a href="https://github.com/pektezol/BitReader">GitHub</a></h2>
+    <h2>Projects | <a href="https://github.com/pektezol">GitHub</a></h2>
     <hr>
     <h3>Portal 2 Least Portals Hub | <a href="https://github.com/pektezol/LeastPortalsHub">GitHub</a> | <a href="https://lp.ardapektezol.com">lp.ardapektezol.com</a></h3>
     <p>Least Portals Hub (LPHUB) is a community-driven platform that aims to gather knowledge and competition of the Portal 2 Least Portals (LP) category in one place.</p>
