--- a/index.html
+++ b/index.html
@@ -16,28 +16,27 @@
   </header>
   <div>
     <hr>
-    <p>Hey! I'm Arda Serdar Pektezol, a computer engineer with over two years of professional experience as a software engineer specializing in cloud and backend development. Currently pursuing a Master's in Computer Science at Georgia Tech.</p>
+    <p>Hey! I'm Arda Serdar Pektezol, a computer engineer with over two years of professional experience as a software engineer specializing in cloud and backend development. Currently pursuing a Master's in Computer Science at <a href="https://www.gatech.edu/">Georgia Tech</a>.</p>
     <p>I have liked working with both software and hardware in the past. If something intrigues me, I will research and work on it no matter what. My aim is to be a jack of all trades, master of one.</p>
-    <p>In my free time, I work on my personal projects which can be found down below. At the moment, I am working on LPHUB and my toy programming language.</p>
-    <p>I also have a blog where me and my friends post rarely. Check it out at <a href="https://blog.pektezol.dev">blog.pektezol.dev</a>.</p>
+    <p>In my free time, I work on my personal projects which can be found down below. At the moment, I am working on LPHUB and my toy programming language. I also love playing Go! Check out my profile at <a href="https://www.europeangodatabase.eu/EGD/Player_Card.php?&key=20137469">European Go Database</a>.</p>
     <hr>
-    <h3>Portal 2 Least Portals Hub | <a href="https://github.com/pektezol/LeastPortalsHub">GitHub</a> | <a href="https://lp.ardapektezol.com">lp.ardapektezol.com</a></h3>
-    <p>Least Portals Hub (LPHUB) is a community-driven platform that aims to gather knowledge and competition of the Portal 2 Least Portals (LP) category in one place.</p>
-    <h3>BitReader | <a href="https://github.com/pektezol/BitReader">GitHub</a></h3>
+    <h3>Portal 2 Least Portals Hub | <a href="https://github.com/pektezol/lphub">GitHub</a> | <a href="https://lp.pektezol.dev">lp.pektezol.dev</a></h3>
+    <p>Least Portals Hub (LPHUB) is a community-driven platform that aims to gather knowledge and competition of the Portal 2 Least Portals (LP) category in one place. Written in Go and React.js</p>
+    <h3>BitReader | <a href="https://github.com/pektezol/bitreader">GitHub</a></h3>
     <p>The simplest bit reader library with big/little-endian support for Golang.</p>
+    <h3>sdp.go | <a href="https://github.com/pektezol/sdp.go">GitHub</a></h3>
+    <p>Source Demo Parser written in Golang.</p>
     <hr>
     <footer>
       <hr>
       <nav class="center">
         <p class="center">&copy; Arda Serdar Pektezol. All rights reserved.</p>
         <a href="https://pektezol.dev">pektezol.dev</a>
+        <a href="mailto:arda@pektezol.dev">arda@pektezol.dev</a>
         <a href="https://blog.pektezol.dev">blog</a>
         <a href="https://resume.pektezol.dev">resume</a>
         <a href="https://github.com/pektezol">github</a>
         <a href="https://linkedin.com/in/pektezol">linkedin</a>
-      </nav>
-      <nav class="center">
-        <a href="mailto:arda@pektezol.dev">arda@pektezol.dev</a>
       </nav>
     </footer>
   </div>
