--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <hr>
     <p>Hey! I'm Arda Serdar Pektezol, a computer engineer with over two years of professional experience as a software engineer specializing in cloud and backend development. Currently pursuing a Master's in Computer Science at <a href="https://www.gatech.edu/">Georgia Tech</a>.</p>
     <p>I have liked working with both software and hardware in the past. If something intrigues me, I will research and work on it no matter what. My aim is to be a jack of all trades, master of one.</p>
-    <p>In my free time, I work on my personal projects which can be found down below. At the moment, I am working on LPHUB and my toy programming language. I also love playing Go! Check out my profile at <a href="https://www.europeangodatabase.eu/EGD/Player_Card.php?&key=20137469">European Go Database</a>.</p>
+    <p>In my free time, I work on my personal projects which can be found down below. At the moment, I am working on Tez and LPHUB. I also love playing Go! Check out my profile at <a href="https://www.europeangodatabase.eu/EGD/Player_Card.php?&key=20137469">European Go Database</a>.</p>
     <hr>
+    <h3>Tez (Programming Language) | tezlang.org (WIP)</h3>
+    <p>Tez is a statically and strongly typed, compiled general purpose programming language. Main purpose of Tez is
+      to be a simple, readable and safe language that combines the best features of other well-known languages.</p>
     <h3>Portal 2 Least Portals Hub | <a href="https://github.com/pektezol/lphub">GitHub</a> | <a href="https://lp.pektezol.dev">lp.pektezol.dev</a></h3>
-    <p>Least Portals Hub (LPHUB) is a community-driven platform that aims to gather knowledge and competition of the Portal 2 Least Portals (LP) category in one place. Written in Go and React.js</p>
-    <h3>BitReader | <a href="https://github.com/pektezol/bitreader">GitHub</a></h3>
-    <p>The simplest bit reader library with big/little-endian support for Golang.</p>
-    <h3>sdp.go | <a href="https://github.com/pektezol/sdp.go">GitHub</a></h3>
-    <p>Source Demo Parser written in Golang.</p>
+    <p>Leading the open-source community project written in Golang and React, which is both a website of leaderboards and knowledge, intended for a niche part of the Portal 2 gaming community.</p>
     <hr>
     <footer>
       <hr>
